# ORB-Graphics-Lib

./: .gitignore  CMakeLists.txt  LICENSE  OverloadedRenderBackend.sln
EmbededShaders/: comp.sh  defaultRender.frag  defaultRender.frag.inc  defaultRender.vert  defaultRender.vert.inc  defaultStoredRender.frag  defaultStoredRender.frag.inc  defaultStoredRender.vert  defaultStoredRender.vert.inc  flatten.frag  flatten.frag.inc  flatten.vert  flatten.vert.inc  shadows.vert  shadows.vert.inc
Embeder/: embeder  fmerge.vert.h  fmerge.vert.inc  main.cpp
Example/: CMakeLists.txt  Example.cpp  Example.vcxproj  Example.vcxproj.filters
Example/Shaders/: flatten.comp  fmerge.vert  frag.frag  glowCompute.comp  lighting.comp  merger.frag  vert.vert
GLAD/: glad.c  glad.h
ORB/Inc/: OverloadedRenderBackend.h
ORB/Lib/Debug/: OverloadedRenderBackend.lib
ORB/Lib/DebugClang/: OverloadedRenderBackend.lib
ORB/Lib/Release/: OverloadedRenderBackend.lib
ORB/Lib/ReleaseClang/: OverloadedRenderBackend.lib
OverloadedRenderBackend/: CMakeLists.txt  Camera.h  Fonts.cpp  Fonts.h  Mesh Library.cpp  Mesh Library.h  Mesh.cpp  Mesh.h  OverloadedRenderBackend.cpp  OverloadedRenderBackend.h  OverloadedRenderBackend.vcxproj  OverloadedRenderBackend.vcxproj.filters  RenderBackend.cpp  RenderBackend.h  RenderPass.cpp  RenderPass.h  ShaderLog.cpp  ShaderLog.hpp  ShaderStage.cpp  ShaderStage.h  Stream.cpp  Stream.h  TexturedMesh.cpp  TexturedMesh.h  Textures.cpp  Textures.h  Vertex.cpp  Vertex.h  Wermal Reader.cpp  Wermal Reader.h  dllmain.cpp  framework.h  pch.h
